added margins and padding

--- a/index.css
+++ b/index.css
@@ -8,6 +8,15 @@
 body {
     background-color: antiquewhite;
 }
+.container {
+    margin: 20px auto;
+}
+ul {
+    margin: 10px auto
+}
+li {
+    margin: 10px;
+}
 h1 {
     margin: 0;
     font-size: 38px;
